--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="NiggaSalamiMeme.css" rel="stylesheet" type="text/css">
+  <title>BOROBHAISSALAMI</title>
+  
 </head>
 <body>
-
   <img class="NiggaSalamiMeme" src="https://media.discordapp.net/attachments/1224115831793782884/1227060695254696028/IMG_1817.png?ex=66270853&is=66149353&hm=a87623adaa48c782cb783dcb9cc639e95d169e6ca579f5c0954c9c671b190203&=&format=webp&quality=lossless&width=440&height=437" alt="" width = "400">
   <script src="NiggaScript.js"></script>
-
 </body>
 </html>
