--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+gsap.to(".NiggaSalamiMeme", { x: 400, y: 100, scale: 4, rotation: 1440, duration: 10, yoyo: true, repeat: 69 })
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,5 +12,6 @@
 <body>
   <img class="NiggaSalamiMeme" src="https://media.discordapp.net/attachments/1224115831793782884/1227060695254696028/IMG_1817.png?ex=66270853&is=66149353&hm=a87623adaa48c782cb783dcb9cc639e95d169e6ca579f5c0954c9c671b190203&=&format=webp&quality=lossless&width=440&height=437" alt="" width = "400">
   <script src="NiggaScript.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 </body>
 </html>
